# smartnsales

./: .envrc  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  conftest.py  pyproject.toml
backend/apps/accounts/: authentication.py  serializers.py  tests.py  urls.py  views.py
backend/apps/accounts/management/commands/: seed_demo.py  seed_user.py
backend/apps/projects/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/apps/projects/migrations/: 0001_initial.py  0002_remove_task_projects_ta_status_d6b74c_idx_and_more.py  0003_alter_task_title_task_projects_ta_assigne_6bc973_idx.py
backend/config/: settings.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py
frontend/: .env.example  Dockerfile  middleware.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  health-status.tsx  layout.tsx  page.tsx  toast.tsx
frontend/app/board/: assignee-picker.test.tsx  board.tsx  error.tsx  loading.tsx  page.tsx
frontend/app/dashboard/: error.tsx  loading.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/lib/: api.ts
nginx/: nginx.conf
