[project]
name = "smartnsales-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "drf-spectacular>=0.27",
    "django-cors-headers>=4.4",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
