[project]
name = "smartnsales-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "drf-spectacular>=0.27",
    "django-filter>=24.0",
    "django-cors-headers>=4.4",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "gunicorn>=23.0",
    "whitenoise>=6.7",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py", "test_*.py"]
testpaths = ["apps"]
addopts = ["--cov=apps", "--cov-report=term-missing", "--cov-fail-under=80"]
